@@ -1,3 +1,8 @@
+Wed Nov 24 13:15:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
+          Some small improvements in connector handling
+
 Wed Nov 24 11:58:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_connector.cpp:
